--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flower photos</h1>
+		<p>Here are some wonderful flower pictures that I took! Have a look!</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses picture</h1>
+		<p>These are some colorful rose pictures to show you all!</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
