--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<h1 id="f1">Flower photos</h1>
+		<h1 id="f1">Flowers photos</h1>
 		<p>Here are some wonderful flower pictures that I took! Have a look!</p>
 	</div>
 	<div>
