--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<p>Here are some wonderful flower pictures that I took! Have a look!</p>
 	</div>
 	<div>
-		<h1 id="f2">Roses picture</h1>
+		<h1 id="f2">Roses pictures</h1>
 		<p>These are some colorful rose pictures to show you all!</p>
 	</div>
     <script type="text/javascript" src="./script.js">
